# vanguard-wms

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/data/: vanguard.db
backend/include/: AVLTree.h  Engine.h  HashTable.h  Huffman.h  LCRSTree.h  Optimizer.h  PriorityQueue.h  TSPSolver.h  WarehouseGraph.h  database.h  router.h
backend/src/: database.cpp  main.cpp  router.cpp
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AddProductModal.jsx  CategorySidebar.jsx  Dashboard.jsx  DispatchDashboard.jsx  DispatchPage.jsx  DsaInsightsPanel.jsx  EfficiencyPage.jsx  HuffmanVisualizer.jsx  LogisticsPage.jsx  MultiPickMap.jsx  ProductTable.jsx  SearchBar.jsx  ShippingMatrix.jsx  Sidebar.jsx  SmartPacker.jsx  StatsRow.jsx  StatusBar.jsx  WarehouseMap.jsx
frontend/src/hooks/: useApi.js
